# Teams-Wpp-Mirror

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  database.py  main.py
app/adapters/: teams_mock_receiver.py  teams_webhook_sender.py  whatsapp_mock_receiver.py  whatsapp_mock_sender.py
app/domain/: mapping.py  message.py  user.py
app/repositories/: mapping_repository.py  message_repository.py  user_repository.py
app/services/: authorization_service.py  message_router.py  whatsapp_outbox_service.py
docs/: API_EXAMPLES.md  ARCHITECTURE.md  ROADMAP.md  STATUSES.md
