[project]
name = "teams-wpp-mirror"
version = "0.1.0"
description = ""
authors = [
    {name = "ramonfv",email = "ramon.fv95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <=3.14"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standart] (>=0.47.0,<0.48.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
